--- a/minimal habit tracker.xcodeproj/xcshareddata/xcschemes/mid-widgetExtension.xcscheme
+++ b/minimal habit tracker.xcodeproj/xcshareddata/xcschemes/mid-widgetExtension.xcscheme
@@ -98,6 +98,16 @@
             value = "HabitWidget"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetKind"
+            value = "SmartStackHabitWidget"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetKind"
+            value = "SmartStackHabitWidget"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
