--- a/minimal habit tracker/minimal_habit_tracker.entitlements
+++ b/minimal habit tracker/minimal_habit_tracker.entitlements
@@ -3,7 +3,13 @@
 <plist version="1.0">
 	<dict>
 		<key>com.apple.developer.icloud-container-identifiers</key>
-		<array/>
+		<array>
+			<string>iCloud.com.xi.HabitTracker.minimal-habit-tracker</string>
+		</array>
+		<key>com.apple.developer.icloud-services</key>
+		<array>
+			<string>CloudKit</string>
+		</array>
 		<key>com.apple.security.application-groups</key>
 		<array>
 			<string>group.com.xi.HabitTracker.minimal-habit-tracker</string>
