--- a/minimal-habit-tracker-Info.plist
+++ b/minimal-habit-tracker-Info.plist
@@ -18,5 +18,54 @@
 			</dict>
 			<dict/>
 		</array>
+		<key>UTExportedTypeDeclarations</key>
+		<array>
+			<dict>
+				<key>UTTypeConformsTo</key>
+				<array>
+					<string>public.text</string>
+					<string>public.comma-separated-values-text</string>
+				</array>
+				<key>UTTypeDescription</key>
+				<string>CSV File</string>
+				<key>UTTypeIdentifier</key>
+				<string>public.comma-separated-values-text</string>
+				<key>UTTypeTagSpecification</key>
+				<dict>
+					<key>public.filename-extension</key>
+					<array>
+						<string>csv</string>
+					</array>
+					<key>public.mime-type</key>
+					<array>
+						<string>text/csv</string>
+					</array>
+				</dict>
+			</dict>
+		</array>
+		<key>UTImportedTypeDeclarations</key>
+		<array>
+			<dict>
+				<key>UTTypeConformsTo</key>
+				<array>
+					<string>public.text</string>
+				</array>
+				<key>UTTypeDescription</key>
+				<string>CSV File</string>
+				<key>UTTypeIdentifier</key>
+				<string>public.comma-separated-values-text</string>
+				<key>UTTypeTagSpecification</key>
+				<dict>
+					<key>public.filename-extension</key>
+					<array>
+						<string>csv</string>
+					</array>
+					<key>public.mime-type</key>
+					<array>
+						<string>text/csv</string>
+					</array>
+				</dict>
+			</dict>
+		</array>
 	</dict>
 </plist>
